k8s/jenkins/jenkins.yaml
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: jenkins
  labels:
    k8s-app: jenkins
  namespace: jenkins-cicd
spec:
  selector:
    matchLabels:
      k8s-app: jenkins
  replicas: 1
  strategy:  
    type: RollingUpdate  
    rollingUpdate:  
      maxSurge: 2  
      maxUnavailable: 0
  template:
    metadata:
      name: jenkins
      labels:
        k8s-app: jenkins
    spec:
      terminationGracePeriodSeconds: 10
      serviceAccount: "jenkins-admin"
      containers:
        - name: jenkins
          image: hexun/jenkins:2.135-apline
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
            - containerPort: 50000
          resources:
            limits:
              cpu: 1
              memory: 1Gi
            requests:
              cpu: 0.5
              memory: 500Mi
          volumeMounts:
            - name: jenkins-home
              mountPath: /var/jenkins_home
            - name: host-time
              mountPath: /etc/localtime
              readOnly: true
          livenessProbe:
            httpGet:
              path: /login
              port: 8080
            initialDelaySeconds: 60
            timeoutSeconds: 5
            failureThreshold: 12 # ~2 minutes
          readinessProbe:
            httpGet:
              path: /login
              port: 8080
            initialDelaySeconds: 60
            timeoutSeconds: 5
            failureThreshold: 12 # ~2 minutes
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - 10.254.0.2
        searches:
          - default.svc.cluster.local
          - svc.cluster.local
          - cluster.local
        options:
          - name: ndots
            value: "2"
          - name: edns0
      securityContext:
        fsGroup: 1000
      volumes:
        - name: jenkins-home
          emptyDir: {}
        - name: host-time
          hostPath:
            path: /etc/localtime
