k8s/jenkins/jenkins-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins-cicd
  labels:
    k8s-app: jenkins
spec:
  type: NodePort
  selector:
    k8s-app: jenkins
  ports:
    - name: web
      port: 8080
      targetPort: 8080
      protocol: TCP
      nodePort: 38080
    - name: agent
      port: 50000
      protocol: TCP
      nodePort: 50000
      targetPort: 50000
